# Personal_Notes

./: README.md
Design_Patterns/: Design_Patterns.md
Design_Patterns/Adapter/Point_to_Line/: draw.hpp  main.cpp  point2line.hpp
Design_Patterns/Bridge/0_pimpl_idiom/: CMakeLists.txt  build.sh  main.cpp  myClass.cpp  myClass.hpp
Design_Patterns/Bridge/1_bridge/: BasicRemote.hpp  CMakeLists.txt  RemoteControl.hpp  build.sh  device.hpp  main.cpp  radio.hpp  remote.md  tv.hpp
Design_Patterns/Bridge/2_Bridge_Exercise/: main.cpp
Design_Patterns/Builder/Builder_ChatGPT_on_Steroids/: main.cpp
Design_Patterns/Builder/Builder_Exercise_ChatGPT_Generated/: main.cpp
Design_Patterns/Builder/Builder_Exercise_Class_Generator/: main.cpp
Design_Patterns/Builder/Builder_Facade/: Person.cpp  Person.hpp  PersonAddressBuilder.hpp  PersonBuilder.cpp  PersonBuilder.hpp  PersonProBuilder.hpp  facade.cpp
Design_Patterns/Builder/HTML_Builder/: HTML_Builder.cpp
Design_Patterns/Command/0_Thread_Management/: main.cpp
Design_Patterns/Facade/: main.cpp
Design_Patterns/Singleton/2_Singleton_Dependency_Injection/: CMakeLists.txt  singleton.hpp  test.cpp
RobotFramework_Selenium/Amazon/: README.md
RobotFramework_Selenium/front_office/: .gitignore
RobotFramework_Selenium/html-demo/: index.htm
SOLID/: SOLID.md
SQL/: SQL.md
agile/: agile.md
discord_bots/: README.md
discord_bots/delicious-bot/: app.js  date_and_time.js  package-lock.json  package.json
discord_bots/node_js_basics/: basics_log.js  date_and_time.js  json_prep.js  main.js  temperature_converter.js
(+91 files in other folders)
